[RICPLT-2483] New resource status request handler
